                       User-Visible WebAuth Changes

WebAuth 4.2.1 (unreleased)

    Fix error decoding keyrings from files on 64-bit systems, preventing
    all use of keyring files.  Reported by Kai Lanz.

WebAuth 4.2.0 (2012-07-13)

    Port to Apache 2.4 (tested with Apache 2.4.1).

    Support for AuthType StanfordAuth has been deprecated and will be
    removed from mod_webauth and mod_webauthldap in a subsequent release.

    Support for AuthType StanfordAuth in mod_webauthldap is not available
    when built with Apache 2.4.  This includes treating "require group"
    directives where the group contains a colon as "require privgroup" and
    setting the SU_AUTH_DIRMAIL, SU_AUTH_DIRNAME, and SU_AUTH_UNIVID
    environment variables.  This behavior is currently still supported for
    now when built with Apache 2.2 or earlier, but is deprecated as
    mentioned above.

    Support Kerberos keyring ticket caches for passing delegated
    credentials from mod_webauth to CGI and embedded code.  Set possessor
    permissions on Kerberos keyring tickets so that other processes
    running as the same UID should not have access.  Patch from Benjamin
    Coddington.

    Fix merging of mod_webkdc Apache directives in some corner cases where
    the directive has a default value or is explicitly set to off.

    WebLogin now only sets a SIGTERM handler to defer exit while
    processing a request.  This will hopefully fix orphaned login.fcgi and
    pwchange.fcgi processes due to SIGTERM arriving while waiting in the
    FastCGI listen loop and then never being woken up again.

    The WebAuth Perl module API now requires creating a WebAuth object
    first and passing that object as the first argument to all other
    functions except the krb5_* functions.  This is the first step in
    making the API more object-oriented.  The only export groups provided
    are :const and :krb5, and all other export requests should be removed.