@@ -69,6 +69,9 @@
 /* Define to 1 if you have the `keyutils' library (-lkeyutils). */
 #undef HAVE_LIBKEYUTILS
 
+/* Define to 1 if you have the <mod_auth.h> header file. */
+#undef HAVE_MOD_AUTH_H
+
 /* Define to 1 if `useragent_ip' is a member of `request_rec'. */
 #undef HAVE_REQUEST_REC_USERAGENT_IP
 
